<resources>
    <string name="app_name">AppCarroLista</string>
    <string name="aplicativo_lista_vip_curso_androide">Aplicativo Lista VIP Curso Androide</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="telefone_de_contato">Telefone de Contato</string>
    <string name="limpa">Limpa</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="finalizar">Finalizar</string>
</resources>